# FICEN-LP1-TP3-Optimo

./: .gitignore  README.md  TP3.mdj  TP3_Optimo.sln  [UML] TP3.mdj
TP3/: Ambulancia.cpp  Ambulancia.h  Avion.cpp  Avion.h  CentroDeSalud.cpp  CentroDeSalud.h  DiagramaDeClases_TP3.cd  Donante.cpp  Donante.h  Estado.h  Fecha.cpp  Fecha.h  GrupoSanguineo.h  Helicoptero.cpp  Helicoptero.h  Hora.cpp  Hora.h  INCUCAI.cpp  INCUCAI.h  ListaCentroSalud.h  ListaDonantes.h  ListaPaciente.cpp  ListaPaciente.h  ListaReceptores.cpp  ListaReceptores.h  ListaTrasplantado.h  ListaVehiculos.cpp  ListaVehiculos.h  Meses.h  Organo.cpp  Organo.h  Organos.h  Paciente.cpp  Paciente.h  Patologia.h  Prioridad.h  Provincia.h  Receptor.cpp  Receptor.h  Sexo.h  (+29 more)
TP3/TP3_INCUCAI/: Ambulancia.cpp  Avion.h  CMakeLists.txt  CentroDeSalud.cpp  CentroDeSalud.h  Donante.h  INCUCAI.h  Organo.h  Paciente.h  Receptor.h  TP3_INCUCAI.vcxproj  TP3_INCUCAI.vcxproj.filters  eEstado.h  eGrupoSanguineo.h  eOrganos.h  eSexo.h
TP3_INCUCAI/: Ambulancia.cpp  Ambulancia.h  Avion.cpp  Avion.h  CMakeLists.txt  CentroDeSalud.cpp  CentroDeSalud.h  Donante.cpp  Donante.h  Fecha.cpp  Fecha.h  Helicoptero.cpp  Helicoptero.h  Hora.cpp  Hora.h  INCUCAI.cpp  INUCAI.cpp  INUCAI.h  Organo.cpp  Organo.h  Paciente.cpp  Paciente.h  Receptor.cpp  Receptor.h  TP3_INCUCAI.h  TP3_INCUCAI.vcxproj  TP3_INCUCAI.vcxproj.filters  Vehiculos.cpp  Vehiculos.h  eEstado.h  eGrupoSanguineo.h  eOrganos.h  ePatologia.h  ePrioridad.h  eProvincia.h  eSexo.h  listaOrganos.cpp  listaOrganos.h  listaT.cpp  listaT.h
TP3_INCUCAI_cmake/: CMakeLists.txt  TP3_INCUCAI.cpp
Test_TP3/: Test_TP3.cpp  Test_TP3.vcxproj  Test_TP3.vcxproj.filters
asd/: Ambulancia.h  (+16 more)
