# CMakeList.txt : CMake project for TP3_INCUCAI, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("TP3_INCUCAI")

# Add source to this project's executable.
add_executable (TP3_INCUCAI "TP3_INCUCAI.cpp" "TP3_INCUCAI.h" "global.h" "Ambulancia.h" "Avion.h" "CentroDeSalud.h" "Donante.h" "Donante.h" "Paciente.h" "Vehiculos.h" "INUCAI.h" "Receptor.h" "Organo.h" "Hora.h" "Helicoptero.h" "eSexo.h" "eProvincia.h" "ePrioridad.h" "ePatologia.h" "eOrganos.h" "eGrupoSanguineo.h" "eEstado.h")

# TODO: Add tests and install targets if needed.
